Added Port Config!

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 MONGODB_URI=mongodb+srv://meherali_db_user:Mpq6cIP4E1uIiVHa@cluster0.thp5c9q.mongodb.net/?appName=Cluster0
 APP_ENV=development
+PORT=8000
 
 # Google OAuth
 GOOGLE_CLIENT_ID=dummy_id
