--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@ PORT=8080
 # Google OAuth
 GOOGLE_CLIENT_ID=dummy_id
 GOOGLE_CLIENT_SECRET=dummy_secret
-GOOGLE_REDIRECT_URI=http://localhost:8000/api/v1/auth/google/callback
+GOOGLE_REDIRECT_URI=https://dancing-mantis-snore-backend.onrender.com/api/v1/auth/google/callback
 
 # JWT
 JWT_SECRET=supersecretkey
